err/valstream.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/valstream'...
Compiling './lib/python3.5/site-packages/valstream/dbi.py'...
***   File "./lib/python3.5/site-packages/valstream/dbi.py", line 73
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/valstream/ds.py'...
***   File "./lib/python3.5/site-packages/valstream/ds.py", line 37
    print json.dumps([data.get(f) for f in fields])
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/valstream/dynamic.py'...
***   File "./lib/python3.5/site-packages/valstream/dynamic.py", line 42
    print "body:", body
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/valstream/graph.py'...
***   File "./lib/python3.5/site-packages/valstream/graph.py", line 15
    print line
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/valstream/io.py'...
***   File "./lib/python3.5/site-packages/valstream/io.py", line 30
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/valstream/jss.py'...
***   File "./lib/python3.5/site-packages/valstream/jss.py", line 16
    print json.dumps(data, indent=4)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/valstream/panya.py'...
***   File "./lib/python3.5/site-packages/valstream/panya.py", line 38
    print f
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/valstream/tsv.py'...
***   File "./lib/python3.5/site-packages/valstream/tsv.py", line 9
    print tostr(*cols)
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/valstream-0.0.6.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
